fixed footer height issue, skills list being too wide for the page and the bug where the footer moves on mobile address bar changing

--- a/src/src/index.css
+++ b/src/src/index.css
@@ -6,7 +6,6 @@
   --brand-colour-4: #b190d9;
   --brand-colour-5: #0003;
   font-size: 16px;
-  scroll-behavior: smooth;
 }
 
 body {
@@ -17,6 +16,15 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--background-colour);
+}
+
+main {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  overflow-y: auto;
+  scroll-behavior: smooth;
+ -webkit-overflow-scrolling: touch;
 }
 
 code {
@@ -79,8 +87,8 @@ header>i {
 footer {
   position: fixed;
   bottom: 0;
+  min-height: 100px;
   width: 100%;
-  height: 10vh;
   text-align: center;
   font-size: 0.7rem;
   color: var(--brand-colour-5);
@@ -88,7 +96,7 @@ footer {
 }
 
 footer>p {
-  margin: 0 0 0.5rem 0;
+  margin: 0 0 0 0;
 }
 
 article {
@@ -159,7 +167,7 @@ i>p {
 }
 
 .skillslist>ul>li {
-  padding: 0.5rem;
+  padding: 0.5rem 0 0.5rem 0;
   font-size: 1.4rem
 }
 
